--- a/config/zn-m2.config
+++ b/config/zn-m2.config
@@ -146,6 +146,11 @@ CONFIG_PACKAGE_stress-ng=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_luci-app-frpc=y
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-app-alist=y
+CONFIG_PACKAGE_luci-app-speedtest-web=y
+CONFIG_PACKAGE_luci-app-cpufreq=y
 CONFIG_PACKAGE_uhttpd-mod-ubus=y
 CONFIG_PACKAGE_uhttpd=y
 CONFIG_PACKAGE_unzip=y
