--- a/config/zn-m2.config
+++ b/config/zn-m2.config
@@ -163,3 +163,4 @@ CONFIG_PACKAGE_zlib=y
 CONFIG_TARGET_ipq60xx=y
 CONFIG_TARGET_ipq60xx_generic=y
 CONFIG_TARGET_ipq60xx_generic_DEVICE_zn_m2=y
+CONFIG_PACKAGE_luci-app-lucky=y
